# cricket-league

./: .env  Cargo.toml
src/: main.rs
src/entity/: codeinfo.rs  mod.rs  models.rs
src/service/: booking_services.rs  data_parsing.rs  jwt_service.rs  mod.rs  team_members_services.rs  team_services.rs  user_services.rs
